Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/defaultMethods/private/Private09.out
Private09.java:9:17: compiler.err.repeated.modifier
1 error
